--- a/css/deck.css
+++ b/css/deck.css
@@ -119,9 +119,24 @@
       box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
       cursor: pointer;
       align-items: center;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       color: hsla(var(--color-green-light-a), 0.5);
       font-family: var(--font-mono);
+      position: relative;
+
+      span {
+        position: absolute;
+        z-index: 2;
+        pointer-events: none;
+        background-color: rgba(0, 0, 0, 0.45);
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(5px);
+        width: 100%;
+        height: 20%;
+        padding-top: 25px;
+        bottom: 0;
+        text-align: center;
+      }
 
       img {
         min-width: 100%;
@@ -153,7 +168,7 @@
         height: 100%;
         pointer-events: none;
         z-index: 2;
-        box-shadow: inset 0 0 50px 8px hsla(var(--color-green-light-a), 0.2);
+        /* box-shadow: inset 0 0 50px 8px hsla(var(--color-green-light-a), 0.2); */
       }
     }
   }
