--- a/css/deck.css
+++ b/css/deck.css
@@ -106,6 +106,8 @@
 
     .card[data-tags="newgrounds"] {
     background: linear-gradient(to bottom, hsl(0, 0%, 0%) 50%, hsl(0, 0%, 8%)) !important;
+      display: block;
+
 
     &:hover span {
     color: #FFB50E !important;
@@ -128,6 +130,9 @@
       background: linear-gradient(to bottom, hsl(0, 0%, 6%), hsl(0, 0%, 8%));
       box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.5);
       cursor: pointer;
+      align-items: center;
+      display: flex;
+      justify-content: center;
 
       font-size: 1.3rem;
       color: hsla(var(--color-green-light-a), 0.5);
