--- a/css/nav.css
+++ b/css/nav.css
@@ -129,7 +129,7 @@
       text-decoration: none;
       display: block;
       height: 100%;
-      padding-left: 1rem;
+      padding-left: 0.6rem;
     }
 
     ul {
@@ -209,7 +209,7 @@
       hsl(var(--color-purple-a), 0.7),
       hsla(var(--color-gray-900-a), 0.4),
       hsla(var(--color-gray-900-a), 0.4),
-      hsla(var(--color-gray-900-a), 0.5)
+      hsla(var(--color-gray-900-a), 0.7)
     );
     box-shadow: 20px 30px 25px rgba(10, 10, 10, 0.4);
     border: var(--glass-border);
@@ -252,13 +252,14 @@
 
   #Dropdown-menu img {
     height: 20px;
-    margin-right: 5px;
-    transform: translateY(2px);
+    margin-right: 10px;
+    transform: translateY(3px);
+        filter: brightness(0.8);
   }
 
-  .dropdown-category img {
+  /* .dropdown-category ul img {
     display: none;
-  }
+  } */
 
   #fish-404 {
     z-index: -1;
