--- a/css/style.css
+++ b/css/style.css
@@ -630,25 +630,32 @@
     margin: 0; 
     height: 152px;
     width: 460px;
+    min-width: 460px;
     border-radius: 20px; 
     overflow: hidden; 
     background-color: #181818; 
     border: var(--glass-border);
+
+
+
   }
 
-  div#sp-shadow {
+  span#sp-shadow {
   position: absolute;
-  top: 228px;
-  right: 14px;
+  top: 226px;
+  right: 11px;
   width: 459px; 
-  height: 151px; 
+  height: 152px; 
   border-radius: 20px;
   box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.9); 
   z-index: 2; 
-}
+  pointer-events: none;
+  border: var(--glass-border);
+  }
 
-
-  
-
+  a:has(#sp-shadow) {
+    height: 154px; 
+    width: 460px;
+  }
 
 }
