--- a/css/twitter.css
+++ b/css/twitter.css
@@ -33,6 +33,15 @@
     transform: translateY(3px);
   }
 
+  li::marker {
+    color: orangered;
+    margin-top: 0;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
   div#Timeline {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
@@ -146,13 +155,14 @@
       hsla(var(--color-purple-hover-a), 0.95),
       hsla(var(--color-purple-a), 0.95)
     );
-    border: var(--glass-border);
+    border: 1px solid orange;
     border-radius: 10px;
     box-shadow: 0px 5px 10px hsla(var(--color-gray-900-a), 0.7);
     color: #fff;
     padding: 6px 10px;
     padding-bottom: 2px;
     font-size: 18px;
+
     pointer-events: none;
     opacity: 0;
     transition: opacity 0.2s ease-in-out;
@@ -166,7 +176,7 @@
     position: absolute;
     transform: scale(0.3) scaleX(-1);
     z-index: 999;
-    top: -75px;
+    top: -78px;
     right: -300px;
   }
 
